[project]
name = "fast-docker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "docker-composer-v2>=0.8.8",
    "docker-manager>=0.0.6",
    "fabric>=3.2.2",
    "fastapi>=0.115.12",
    "loguru>=0.5.3",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
]
